fix bug on homepage

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,6 +27,14 @@
         </div>
     </section>
 
+    <!-- Main -->
+    <div id="main">
+
+        <!-- One -->
+        {% include tiles.html %}
+
+    </div>
+
     {% include footer.html %}
 
 </body>
