--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -79,6 +79,7 @@
 			</ul>
 			<ul class="copyright">
 				<li>&copy; {{ site.title }} {{ site.subtitle }}</li>
+				<li>Southern New Hampshire University</li>
 
 			</ul>
 		</div>
